--- a/requirements.txt
+++ b/requirements.txt
@@ -1,86 +1,62 @@
-altgraph==0.17.3
-argcomplete==2.0.0
-attrs==22.2.0
-autocommand==2.2.2
-beautifulsoup4==4.12.2
-Brlapi==0.8.4
-browser-cookie3==0.19.1
-build==0.10.0
-certifi==2023.5.7
-cffi==1.15.1
-chardet==5.1.0
-click==8.1.4
-cryptography==41.0.1
-Cython==0.29.36
-dbus-python==1.3.2
-distro==1.8.0
-docutils==0.20.1
-evdev==1.6.1
-execnet==1.9.0
-fastjsonschema==2.17.1
-flaky==3.7.0
-greenlet==2.0.2
-idna==3.4
-importlib-metadata==5.0.0
-inflect==6.1.0
-iniconfig==2.0.0
-installer==0.7.0
-jaraco.classes==3.2.3
-jaraco.context==4.3.0
-jaraco.functools==3.8.0
-jaraco.text==3.11.1
-jeepney==0.8.0
-keyring==23.13.1
-libfdt==1.7.0
-libtorrent==2.0.9
-libvirt-python==9.5.0
-louis==3.26.0
-lxml==4.9.2
-lz4==4.3.2
-Mako==1.2.4
-Markdown==3.4.3
+acme==1.12.0
+aiohttp==3.9.1
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.1.0
+cached-property==1.5.2
+certbot==1.12.0
+certbot-nginx==1.10.1
+certifi==2020.6.20
+chardet==4.0.0
+colorzero==1.1
+ConfigArgParse==1.2.3
+configobj==5.0.6
+cryptography==3.3.2
+dbus-python==1.2.16
+discord-py-interactions==4.4.1
+distlib==0.3.6
+distro==1.5.0
+distro-info==1.0+deb11u1
+filelock==3.12.2
+frozenlist==1.4.1
+gixy==0.1.20
+gpiozero==1.6.2
+idna==2.10
+Jinja2==3.1.2
+josepy==1.2.0
 MarkupSafe==2.1.3
-meson==1.1.1
-moddb==0.8.1
-more-itertools==9.1.0
-msgpack==1.0.5
-netsnmp-python==1.0a1
-nftables==0.1
-ordered-set==4.1.0
-packaging==23.1
-Pillow==10.0.0
-pipx==1.2.0
-platformdirs==3.5.1
-pluggy==1.0.0
-ply==3.11
-psutil==5.9.5
-pycairo==1.23.0
-pycparser==2.21
-pycryptodomex==3.12.0
-pydantic==1.10.9
-PyGObject==3.44.1
-pyinstaller==5.13.0
-pyinstaller-hooks-contrib==2023.5
-pynvim==0.4.3
-pyproject_hooks==1.0.0
-pyrate-limiter==2.10.0
-pytest==7.4.0
-pytest-drop-dup-tests==0.0.0
-pytest-rerunfailures==12.0
-pytest-timeout==2.1.0
-pytest-xdist==3.3.1
-PyYAML==6.0
-requests==2.28.2
-SecretStorage==3.3.3
-soupsieve==2.4.1
-tinyaes==1.0.4
-tomli==2.0.1
-toolz==0.12.0
-tqdm==4.65.0
-trove-classifiers==2023.7.8
-typing_extensions==4.7.0
-urllib3==1.26.15
-userpath==1.8.0
-validate-pyproject==0.13.post1.dev0+gb752273.d20230520
-vimiv==0.9.1
-zipp==3.15.0
+multidict==6.0.4
+numpy==1.19.5
+parsedatetime==2.6
+picamera2==0.3.12
+pidng==4.0.9
+piexif==1.1.3
+Pillow==8.1.2
+platformdirs==3.8.1
+pycurl==7.43.0.6
+PyGObject==3.38.0
+PyICU==2.5
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+pyRFC3339==1.1
+python-apt==2.2.1
+python-dotenv==1.0.0
+python-prctl==1.7
+pytz==2021.1
+requests==2.25.1
+requests-toolbelt==0.9.1
+RPi.GPIO==0.7.0
+simplejpeg==1.6.4
+six==1.16.0
+spidev==3.5
+ssh-import-id==5.10
+toml==0.10.1
+unattended-upgrades==0.1
+urllib3==1.26.5
+v4l2-python3==0.3.2
+virtualenv==20.23.1
+yarl==1.9.4
+zope.component==4.3.0
+zope.event==4.4
+zope.hookable==5.0.1
+zope.interface==5.2.0
